<?xml version="1.0"?>
<package format="2">
	<name>turtlebot_control</name>
	<version>0.0.0</version>
	<description>The turtlebot_control package</description>

	<maintainer email="jenneva@todo.todo">jenneva</maintainer>

	<license>TODO</license>

	<!-- Dependencies -->
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>tf2_ros</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>tf2</build_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>nav_msgs</exec_depend>
	<exec_depend>tf2_ros</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>tf2</exec_depend>

	<!-- Export -->
	<export>
	</export>
</package>
